--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
