--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.6.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "daisyui": "^3.1.5",
+    "moment": "^2.29.4",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
