--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "daisyui": "^3.1.5",
+    "dayjs": "^1.11.9",
     "moment": "^2.29.4",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
