--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "antd": "^5.6.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
@@ -20,7 +22,7 @@
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
